[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    "primitives",
    'runtime',
    'modules/claims',
    'modules/asset-config',
    'modules/evm-accounts',
    'modules/traits',
    'modules/type-utils',
    'modules/erc20-precompile',
]

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
# frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
# pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
# pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
# pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
# sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-sandbox = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }

ethereum = { git = "https://github.com/clover-network/ethereum", branch = "pangwa/evm-tracing" }
evm = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
evm-runtime = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
evm-gasometer = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
