[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    "primitives",
    'runtime',
    'modules/claims',
    'modules/asset-config',
    'modules/evm-accounts',
    'modules/traits',
    'modules/type-utils',
    'modules/erc20-precompile',
]

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
# frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
# pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
# pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
# pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
# sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-sandbox = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }

ethereum = { git = "https://github.com/clover-network/ethereum", branch = "pangwa/evm-tracing" }
evm = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
evm-runtime = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
evm-gasometer = { git = "https://github.com/clover-network/evm", branch = "pangwa/evm-tracing" }
