[package]
name = 'clover'
authors = ['Clover Network <https://github.com/clover-network>']
build = 'build.rs'
description = 'Clover node'
edition = "2021"
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.23'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'clover'

[dependencies]
primitives = { package = 'clover-primitives', path = '../primitives', version = '0.9.0'}
clover-runtime = {path = '../runtime', version = '0.9.0' }
clover-rpc = {default-features = false, version = '0.9.0', package = 'clover-rpc', path = '../rpc' }
futures = { version = "0.3.9", features = ["compat"] }

clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }

log = "0.4.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.15"

pallet-contracts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" , default-features = false }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-cli = { features = ["wasmtime"], optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-executor = {features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sc-service = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-sysinfo =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"   }
hex-literal = { version = '0.3.1' }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23"  }
pallet-evm = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
pallet-ethereum = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fc-rpc = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fc-consensus = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fp-consensus = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fp-trace-ext = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fc-db = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fc-rpc-core = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
fc-mapping-sync = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.23" }
primitive-types = { version = "0.11", default-features = false, features = ["rlp", "byteorder"] }

cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }

cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }

polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }

[features]
default = [ "cli" ]

cli = [
    "wasmi-errno",
    "sc-cli",
    "sc-service/db",
]

wasmtime = [
    "sc-executor/wasmtime",
]

wasmi-errno = [
    "sc-executor/wasmi-errno",
]
